--- a/231.09.Lab/Lab07.vcxproj.filters
+++ b/231.09.Lab/Lab07.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="angle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="spaceObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="angle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="spaceObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
