--- a/231.09.Lab/Lab07.vcxproj
+++ b/231.09.Lab/Lab07.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="angle.cpp" />
     <ClCompile Include="Lab07.cpp" />
     <ClCompile Include="position.cpp" />
+    <ClCompile Include="satellite.cpp" />
     <ClCompile Include="spaceObject.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="uiDraw.cpp" />
@@ -152,10 +153,15 @@
   <ItemGroup>
     <ClInclude Include="acceleration.h" />
     <ClInclude Include="angle.h" />
+    <ClInclude Include="hubble.h" />
     <ClInclude Include="position.h" />
+    <ClInclude Include="satellite.h" />
     <ClInclude Include="spaceObject.h" />
     <ClInclude Include="test.h" />
+    <ClInclude Include="testAcceleration.h" />
+    <ClInclude Include="testAngle.h" />
     <ClInclude Include="testPosition.h" />
+    <ClInclude Include="testVelocity.h" />
     <ClInclude Include="uiDraw.h" />
     <ClInclude Include="uiInteract.h" />
     <ClInclude Include="unitTest.h" />
