added getter and setter tests to spaceobject

--- a/231.09.Lab/Lab07.vcxproj.filters
+++ b/231.09.Lab/Lab07.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClInclude Include="hubble.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="testSpaceObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
