--- a/231.09.Lab/Lab07.vcxproj.filters
+++ b/231.09.Lab/Lab07.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="starlink.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dreamChaser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="starlink.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dreamChaser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
