fixed hubble test started on dragon

--- a/231.09.Lab/Lab07.vcxproj
+++ b/231.09.Lab/Lab07.vcxproj
@@ -175,6 +175,9 @@
     <ClInclude Include="test.h" />
     <ClInclude Include="testAcceleration.h" />
     <ClInclude Include="testAngle.h" />
+    <ClInclude Include="testDragon.h" />
+    <ClInclude Include="testEarth.h" />
+    <ClInclude Include="testHubble.h" />
     <ClInclude Include="testPosition.h" />
     <ClInclude Include="testSpaceObject.h" />
     <ClInclude Include="testVelocity.h" />
