wrote tests for dragon sputnik and starlink

--- a/231.09.Lab/Lab07.vcxproj
+++ b/231.09.Lab/Lab07.vcxproj
@@ -180,6 +180,8 @@
     <ClInclude Include="testHubble.h" />
     <ClInclude Include="testPosition.h" />
     <ClInclude Include="testSpaceObject.h" />
+    <ClInclude Include="testSputnik.h" />
+    <ClInclude Include="testStarlink.h" />
     <ClInclude Include="testVelocity.h" />
     <ClInclude Include="uiDraw.h" />
     <ClInclude Include="uiInteract.h" />
