adjusted some of the individual satellite unit tests and completed the dreamchaser tests

--- a/231.09.Lab/Lab07.vcxproj
+++ b/231.09.Lab/Lab07.vcxproj
@@ -176,7 +176,9 @@
     <ClInclude Include="testAcceleration.h" />
     <ClInclude Include="testAngle.h" />
     <ClInclude Include="testDragon.h" />
+    <ClInclude Include="testDreamChaser.h" />
     <ClInclude Include="testEarth.h" />
+    <ClInclude Include="testGps.h" />
     <ClInclude Include="testHubble.h" />
     <ClInclude Include="testPosition.h" />
     <ClInclude Include="testSpaceObject.h" />
