--- a/231.09.Lab/Lab07.vcxproj.filters
+++ b/231.09.Lab/Lab07.vcxproj.filters
@@ -155,6 +155,12 @@
     <ClInclude Include="testStarlink.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="testGps.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="testDreamChaser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
