fixed thruster tests and split all test files

--- a/231.09.Lab/Lab07.vcxproj
+++ b/231.09.Lab/Lab07.vcxproj
@@ -154,6 +154,18 @@
     <ClCompile Include="sputnik.cpp" />
     <ClCompile Include="starlink.cpp" />
     <ClCompile Include="test.cpp" />
+    <ClCompile Include="testAcceleration.cpp" />
+    <ClCompile Include="testAngle.cpp" />
+    <ClCompile Include="testDragon.cpp" />
+    <ClCompile Include="testDreamChaser.cpp" />
+    <ClCompile Include="testEarth.cpp" />
+    <ClCompile Include="testGps.cpp" />
+    <ClCompile Include="testHubble.cpp" />
+    <ClCompile Include="testPosition.cpp" />
+    <ClCompile Include="testSpaceObject.cpp" />
+    <ClCompile Include="testSputnik.cpp" />
+    <ClCompile Include="testStarlink.cpp" />
+    <ClCompile Include="testVelocity.cpp" />
     <ClCompile Include="uiDraw.cpp" />
     <ClCompile Include="uiInteract.cpp" />
     <ClCompile Include="velocity.cpp" />
