fragment and part implemented

--- a/231.09.Lab/Lab07.vcxproj
+++ b/231.09.Lab/Lab07.vcxproj
@@ -144,12 +144,15 @@
     <ClCompile Include="dragon.cpp" />
     <ClCompile Include="dreamChaser.cpp" />
     <ClCompile Include="earth.cpp" />
+    <ClCompile Include="fragment.cpp" />
     <ClCompile Include="gps.cpp" />
     <ClCompile Include="hubble.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="part.cpp" />
     <ClCompile Include="position.cpp" />
     <ClCompile Include="satellite.cpp" />
     <ClCompile Include="simulator.cpp" />
+    <ClCompile Include="spaceJunk.cpp" />
     <ClCompile Include="spaceObject.cpp" />
     <ClCompile Include="sputnik.cpp" />
     <ClCompile Include="starlink.cpp" />
@@ -176,11 +179,14 @@
     <ClInclude Include="dragon.h" />
     <ClInclude Include="dreamChaser.h" />
     <ClInclude Include="earth.h" />
+    <ClInclude Include="fragment.h" />
     <ClInclude Include="gps.h" />
     <ClInclude Include="hubble.h" />
+    <ClInclude Include="part.h" />
     <ClInclude Include="position.h" />
     <ClInclude Include="satellite.h" />
     <ClInclude Include="simulator.h" />
+    <ClInclude Include="spaceJunk.h" />
     <ClInclude Include="spaceObject.h" />
     <ClInclude Include="sputnik.h" />
     <ClInclude Include="starlink.h" />
