bullet lamost done, need to make constructor, and add tests

--- a/231.09.Lab/Lab07.vcxproj
+++ b/231.09.Lab/Lab07.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="acceleration.cpp" />
     <ClCompile Include="angle.cpp" />
+    <ClCompile Include="bullet.cpp" />
     <ClCompile Include="dragon.cpp" />
     <ClCompile Include="dreamChaser.cpp" />
     <ClCompile Include="earth.cpp" />
@@ -178,6 +179,7 @@
   <ItemGroup>
     <ClInclude Include="acceleration.h" />
     <ClInclude Include="angle.h" />
+    <ClInclude Include="bullet.h" />
     <ClInclude Include="dragon.h" />
     <ClInclude Include="dreamChaser.h" />
     <ClInclude Include="earth.h" />
